--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,17 +6,79 @@
  *
  * Made By MaterializeCSS.com
  */
- 
+
 .icon-block {
-    padding: 0 15px;
+  padding: 0 15px;
 }
 
 .icon-block .material-icons {
-    font-size: inherit;
+  font-size: inherit;
 }
-ul.social{
-    img{
-        width: 24px;
-        height: 24px;
-    }
+ul.social {
+  img {
+    width: 24px;
+    height: 24px;
+  }
 }
+.dropdown-menu > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  color: #333;
+  white-space: nowrap;
+}
+
+.btn {
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: normal;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  border-radius: 4px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+}
+.btn {
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+}
+
+textarea {
+  content: "Leave your comment here...";
+}
+
+textarea:focus {
+  content: "";
+}
+
+//Material design contact form
+
+
+.card.horizontal {
+  width: 80%;
+  margin: auto;
+}
+
+#form-header{
+  text-align: center;
+  width: 100%;
+}
+
+//Signin Page
+
